# server/src/server_functions.rs
@@ -2,44 +2,43 @@ use rocket::http::hyper::server::Server;
 use rusqlite::{ params_from_iter, Error, ErrorCode, Result };
 use rand::Rng;
 use std::fmt::Display;
+use std::fs;
 
-use crate::server_errors::ServerError;
+use crate::errors::database_setup_error::DatabaseSetupError;
+use crate::errors::server_error::ServerError;
 use crate::database_connector::DatabaseConnector;
 use crate::{ rest_responses, rest_bodies };
 
 pub fn setup_database(connector: &dyn DatabaseConnector) -> Result<(), ServerError> {
     let connection = connector.open().sql_err()?;
-    
-    let menu_items_exists_query = "SELECT 1 FROM sqlite_master WHERE type='table' AND name='menu_items';";
-    let mut stmt = connection.prepare(menu_items_exists_query).sql_err()?;
-    let menu_items_table_exists = stmt.exists([]).sql_err()?;
 
-    if !menu_items_table_exists {
-        connection.execute("
-            CREATE TABLE menu_items (
-                id INTEGER PRIMARY KEY,
-                name TEXT);", ()).sql_err()?;
-            connection.execute("INSERT INTO menu_items (name) VALUES ('Hamburger')", ()).sql_err()?;
-            connection.execute("INSERT INTO menu_items (name) VALUES ('Salad')", ()).sql_err()?;
-            connection.execute("INSERT INTO menu_items (name) VALUES ('Sushi')", ()).sql_err()?;
-            connection.execute("INSERT INTO menu_items (name) VALUES ('Ice Cream')", ()).sql_err()?;
-            connection.execute("INSERT INTO menu_items (name) VALUES ('Soda');", ()).sql_err()?;
+    connection.execute("
+        CREATE TABLE IF NOT EXISTS menu_items (
+            id INTEGER PRIMARY KEY,
+            name TEXT UNIQUE);", ()).sql_err()?;
+    connection.execute("
+        CREATE TABLE IF NOT EXISTS orders (
+            id INTEGER PRIMARY KEY,
+            menu_item_id INTEGER,
+            table_number INTEGER,
+            minutes_to_cook INTEGER,
+            FOREIGN KEY(menu_item_id) REFERENCES menu_items(id));", ()).sql_err()?;
+    connection.execute("
+        CREATE TABLE IF NOT EXISTS idempotent_requests (
+            idempotency_key TEXT PRIMARY KEY);", ()).sql_err()?;
+
+    let menu_items_exist_query = "SELECT * FROM menu_items;";
+    let mut stmt = connection.prepare(menu_items_exist_query).sql_err()?;
+    let menu_items_exist = stmt.exists([]).sql_err()?;
+
+    if !menu_items_exist {
+        let data_sql = "
+            INSERT INTO menu_items (name) VALUES
+                ('Hamburger'), ('Salad'), ('Sushi'), ('Ice Cream'), ('Soda');";
+
+        connection.execute(data_sql, ()).sql_err()?;
     }
 
-    let orders_exists_query = "SELECT 1 FROM sqlite_master WHERE type='table' AND name='orders';";
-    let mut stmt = connection.prepare(orders_exists_query).sql_err()?;
-    let orders_table_exists = stmt.exists([]).sql_err()?;
-
-    if !orders_table_exists {
-        connection.execute("
-            CREATE TABLE orders (
-                id INTEGER PRIMARY KEY,
-                idempotency_key TEXT UNIQUE,
-                menu_item_id INTEGER,
-                table_number INTEGER,
-                minutes_to_cook INTEGER,
-                FOREIGN KEY(menu_item_id) REFERENCES menu_items(id));", ()).sql_err()?;
-    }
     Result::Ok(())
 }
 
@@ -58,6 +57,8 @@ pub fn get_menu_items(connector: &dyn DatabaseConnector) -> Result<rest_response
     for item in query_result {
         items.push(item.sql_err()?);
     }
+    
+    println!("{}", items.iter().map(|i| i.name.to_string()).collect::<String>());
 
     Result::Ok(
         rest_responses::MenuItems {
@@ -70,31 +71,37 @@ pub fn add_orders(connector: &dyn DatabaseConnector, table_number: u32, orders: 
     let mut connection = connector.open().sql_err()?;
     let transaction = connection.transaction().sql_err()?;
 
+    if let Some(key) = orders.idempotency_key {
+        transaction.execute(
+            "INSERT INTO idempotent_requests (idempotency_key) VALUES (:key)",
+            &[(":key", &key)])
+            .map_err(|e| match e {
+                Error::SqliteFailure(err, _) if err.code == ErrorCode::ConstraintViolation =>
+                    ServerError::Idempotency,
+                x => ServerError::SqlError(x)
+            })?;
+    }
+
+    let mut ids = Vec::new();
+
     for order in &orders.orders {
         let cook_time = rand::thread_rng().gen_range(5..15);
         let rows = transaction.execute(
-            "INSERT INTO orders (idempotency_key, menu_item_id, table_number, minutes_to_cook)
+            "INSERT INTO orders (menu_item_id, table_number, minutes_to_cook)
             SELECT
-                :idempotency_key,
                 m.id,
                 :table_number,
                 :cook_time
             FROM menu_items AS m WHERE m.id = :menu_item_id",
             &[
-                (":idempotency_key", &order.idempotency_key.to_string()),
                 (":table_number", &table_number.to_string()),
                 (":cook_time", &cook_time.to_string()),
                 (":menu_item_id", &order.menu_item_id.to_string())])
-            .map_err(|e| match e {
-                Error::SqliteFailure(err, Some(msg)) => match err.code {
-                    ErrorCode::ConstraintViolation => ServerError::Idempotency(),
-                    _ => ServerError::SqlError(msg.to_string())
-                },
-                x => ServerError::SqlError(x.to_string())
-            })?;
+            .sql_err()?;
         if rows == 0 {
-            return Err(ServerError::DataNotFound());
+            return Err(ServerError::DataNotFound);
         }
+        ids.push(transaction.last_insert_rowid());
     };
 
     transaction.commit().sql_err()?;
@@ -102,12 +109,12 @@ pub fn add_orders(connector: &dyn DatabaseConnector, table_number: u32, orders: 
     let query = format!("SELECT o.id, o.minutes_to_cook, m.id, m.name
         FROM orders AS o
         INNER JOIN menu_items AS m ON m.id = o.menu_item_id
-        WHERE o.idempotency_key IN ({})",
-        (1..orders.orders.len() + 1).map(|x| format!("?{x}")).collect::<Vec<_>>().join(","));
+        WHERE o.id IN ({})",
+        (1..ids.len() + 1).map(|x| format!("?{x}")).collect::<Vec<_>>().join(","));
 
     let mut stmt = connection.prepare(&query).sql_err()?;
     let query_result = stmt.query_map(
-        params_from_iter(orders.orders.iter().map(|o| o.idempotency_key.to_string())),
+        params_from_iter(ids.iter().map(|i| i.to_string())),
         |row| Result::Ok(rest_responses::Order {
             id: row.get(0)?,
             minutes_to_cook: row.get(1)?,
@@ -175,8 +182,8 @@ pub fn get_order(connector: &dyn DatabaseConnector, table_number: u32, order_id:
             menu_item_name: row.get(3)?
         }))
         .map_err(|e| match e {
-            Error::QueryReturnedNoRows => ServerError::DataNotFound(),
-            x => ServerError::SqlError(x.to_string())
+            Error::QueryReturnedNoRows => ServerError::DataNotFound,
+            x => ServerError::SqlError(x)
         })?;
 
     Result::Ok(query_result)
@@ -194,15 +201,14 @@ pub fn delete_order(connector: &dyn DatabaseConnector, table_number: u32, order_
     Result::Ok(())
 }
 
-pub trait DisplayResultMethods<T, E> {
+pub trait DisplayResultMethods<T> {
     fn sql_err(self) -> Result<T, ServerError>;
 }
 
-impl<T, E> DisplayResultMethods<T, E> for Result<T, E>
-where E: Display,
+impl<T> DisplayResultMethods<T> for Result<T, rusqlite::Error>
 {
     fn sql_err(self) -> Result<T, ServerError>
     {
-        self.map_err(|e| ServerError::SqlError(e.to_string()))
+        self.map_err(|e| ServerError::SqlError(e))
     }
 }
